# geoencoder

./: .dockerignore  .gitignore  Dockerfile.geocoding  EXPERIMENT_REPORT.md  README.md  pyproject.toml
comparing/: .env.example  README.md  run_comparison.py
comparing/results/: comparison_map.html  comparison_map_data.json  comparison_report.json  comparison_summary.md
docs/experiment_results/run_2026-02-25_14-50-07/: README.md  config.json  map_errors.html  metrics.json
eda_and_cleaning/: README.md  analyze_addresses.py
geocoding/: README.md  __init__.py  augmentations.py  backfill_experiment.py  cleaning.py  config.py  coordinates.py  data.py  losses.py  metrics.py  model.py  run_90_5_5_full50.sh  run_clean_100ep.sh  train.py  visualize_test.py
scripts/: __init__.py  download_pbf.py  fetch_osm_addresses.py
