[project]
name = "osm-address-dataset"
version = "0.1.0"
description = "Collect address–coordinate pairs from OpenStreetMap PBF dumps (local, no API)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tqdm>=4.66",
    "rich>=13.0",
    "osmium>=3.7",
    "torch>=2.0",
    "transformers>=4.40",
    "matplotlib>=3.7",
    "folium>=0.15",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
